# mistraltest

./: README.md
rust-ui/: .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  build-wasm.sh  deploy.sh
rust-ui/.github/workflows/: rust-wasm.yml
rust-ui/src/: app.rs  knob.rs  lib.rs  main.rs
rust-ui/web/: .gitignore  index.html
